# dashboard-seccionadora-lcdc

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  Indicaciones antes de producción.txt  PROJECT_STRUCTURE.md  README.md  README_DEPLOYMENT.md  cambios_kpis_15925.txt  config.py  dashboard_streamlit.py  database.py  etl_secc.py  export_data.bat  generate_insert_script.py  init_database.sql  migrate_to_supabase.py  pyproject.toml  requirements.txt  script_seccionadora.py  secrets.toml.example
.claude/: settings.local.json
.github/workflows/: deploy.yml
.streamlit/: config.toml
